# sica-platform

./: .gitignore  .pre-commit-config.yaml  .vercelignore  CONTRIBUTING.md  MASTER_PLAN.md  README.md  ROADMAP.md  SECURITY.md  STRATEGY.md  STRATEGY.v0.1.backup.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  harness-thresholds.yaml  labels-init.yml
.github/ISSUE_TEMPLATE/: bug.md  clinical-validation.md  config.yml  feature.md
.github/workflows/: README.md  ci.yml  harness-gate.yml  langfuse-cleanup.yml  sync-roadmap.yml
apps/: README.md
apps/api/: .env.example  README.md  RENDER.md  pyproject.toml
apps/api/src/sica_api/: __init__.py  extractor_status.py  main.py  schemas.py  settings.py  tracing.py
apps/api/src/sica_api/routes/: extract.py  health.py  models.py  providers.py
apps/api/tests/: conftest.py  test_extract.py  test_extract_provider_routing.py  test_extract_response_metadata.py  test_extract_with_tracing.py  test_health.py  test_models.py  test_phi_in_error_responses.py  test_providers.py  test_settings.py  test_tracing.py
apps/web/: .env.example  .gitignore  README.md  VERCEL.md  middleware.ts  next.config.ts  package.json  vercel.json  vitest.config.ts  vitest.setup.ts
docs/: STATUS.md  fundraising-narrative.md  glossary.md  operating-model.md  roadmap.md
docs/decisions/: 0001-monorepo-turborepo.md  0002-living-roadmap-system.md  0003-security-and-phi-policy.md  0004-model-routing-policy.md  0005-evaluation-methodology.md  0006-render-config-precedence.md  0007-langfuse-observability.md  0008-prompt-registry-versioning.md  0009-phi-redaction-in-tracing.md  0010-langfuse-trace-retention.md  0011-frontend-stack.md  README.md
evals/: GROUND_TRUTH_PROCESS.md  README.md  pyproject.toml
evals/fixtures/: README.md  synthetic_case_01.expected.json  synthetic_case_01.expected.meta.json  synthetic_case_02_preeclampsia.expected.json  synthetic_case_02_preeclampsia.expected.meta.json  synthetic_case_03_gemelar.expected.json  synthetic_case_03_gemelar.expected.meta.json  synthetic_case_04_rpm.expected.json  synthetic_case_04_rpm.expected.meta.json  synthetic_case_05_diabetes_gestacional.expected.json  synthetic_case_05_diabetes_gestacional.expected.meta.json  synthetic_case_06_anemia_severa.expected.json  synthetic_case_06_anemia_severa.expected.meta.json  synthetic_case_07_manuscrito.expected.json  synthetic_case_07_manuscrito.expected.meta.json  synthetic_case_08_placenta_previa.expected.json  synthetic_case_08_placenta_previa.expected.meta.json  synthetic_case_09_amenaza_parto_prematuro.expected.json  synthetic_case_09_amenaza_parto_prematuro.expected.meta.json  synthetic_case_10_oligohidramnios.expected.json  synthetic_case_10_oligohidramnios.expected.meta.json  synthetic_case_11_hipotiroidismo.expected.json  synthetic_case_11_hipotiroidismo.expected.meta.json  synthetic_case_12_itu.expected.json  synthetic_case_12_itu.expected.meta.json  synthetic_case_13_adolescente_vulnerable.expected.json  synthetic_case_13_adolescente_vulnerable.expected.meta.json  synthetic_case_14_caso_complejo.expected.json  synthetic_case_14_caso_complejo.expected.meta.json  synthetic_case_15_pdf_escaneado_borroso.expected.json  synthetic_case_15_pdf_escaneado_borroso.expected.meta.json
evals/fixtures/baselines/: README.md  claude_sonnet_4_5_longitudinal_lucia_sem16.baseline.json  claude_sonnet_4_5_synthetic_case_01.baseline.json  claude_sonnet_4_5_synthetic_case_01.baseline.meta.json
evals/fixtures/longitudinal_lucia/sem16/: extracted.json  extracted_v2.json  meta.json
evals/fixtures/longitudinal_lucia/sem24/: extracted.json  extracted_v2.json  meta.json
evals/fixtures/longitudinal_lucia/sem32/: extracted.json  extracted_v2.json  meta.json
evals/fixtures/longitudinal_lucia/sem38/: extracted.json  extracted_v2.json  meta.json
evals/fixtures/prompts/: smoke_v1_synthetic_case_01.json
evals/scripts/: generate_meta_files.py
evals/src/sica_evals/: __init__.py  cli.py  harness.py  schemas.py
evals/src/sica_evals/comparators/: __init__.py  field_comparator.py  gate_comparator.py  prompt_comparator.py  prompt_metrics.py  span_comparator.py
evals/src/sica_evals/extractors/: __init__.py  clinical_extractor_wrapper.py  mock_extractor.py
evals/src/sica_evals/metrics/: README.md  __init__.py  calibration.py  critical_omissions.py  factual_accuracy.py  hallucinations.py
evals/src/sica_evals/reporters/: __init__.py  comparison_reporter.py  gate_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py
evals/tests/: test_comparators.py  test_gate_comparator.py  test_gate_integration.py  test_harness.py  test_longitudinal_continuity.py  test_metrics.py  test_metrics_spec.py  test_prompt_comparator.py  test_prompt_v2_no_pregnancy_in_problems.py
scripts/: generate_roadmap.py  setup-labels.ps1  setup-labels.sh  setup-pre-commit.ps1  setup-pre-commit.sh
scripts/langfuse_retention/: README.md  pyproject.toml
scripts/langfuse_retention/src/langfuse_retention/: __init__.py  cleanup.py  cli.py
scripts/langfuse_retention/tests/: test_cleanup.py
services/: README.md
services/clinical-extractor/: .env.example  README.md  pyproject.toml
services/clinical-extractor/scripts/: generate_longitudinal_pdfs.py  generate_synthetic_pdfs.py
services/clinical-extractor/src/clinical_extractor/: __init__.py  cli.py  extractor.py  phi.py  pricing.py  prompts.py  schemas.py  settings.py  telemetry.py  tracing.py
services/clinical-extractor/src/clinical_extractor/prompts/: __init__.py  registry.py
services/clinical-extractor/src/clinical_extractor/prompts/versions/: __init__.py  extract_obstetric_v1.md  extract_obstetric_v2.md
services/clinical-extractor/src/clinical_extractor/providers/: __init__.py  anthropic_provider.py  base.py  registry.py  vertex_medgemma_provider.py
services/clinical-extractor/tests/: conftest.py  test_cli.py  test_extractor.py  test_hardening.py  test_phi.py  test_pricing.py  test_prompt_registry.py  test_providers.py  test_tracing.py
supabase/: README.md
(+76 files in other folders)
