[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "sica-api"
version = "0.1.0"
description = "SICA — HTTP backend que expone el clinical-extractor y orquesta servicios clínicos."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
    { name = "SICA Platform" },
]
keywords = ["healthtech", "clinical-ai", "fastapi", "obstetrics", "sica"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.13",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "anthropic>=0.39.0",
    "pypdf>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]
# Optional integration with clinical-extractor (installed from local path in dev).
extractor = [
    "clinical-extractor",
]

[project.scripts]
sica-api = "sica_api.main:run"

[project.urls]
Homepage = "https://github.com/aaronhuaynate66/sica-platform"
Repository = "https://github.com/aaronhuaynate66/sica-platform"

[tool.hatch.build.targets.wheel]
packages = ["src/sica_api"]

# =========================================================================
# Ruff
# =========================================================================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "TCH",
    "PTH",
    "RUF",
]
ignore = [
    "E501",
    # FastAPI requiere Depends(...) y File(...) en argumentos por defecto.
    # B008 está pensado para código generalista; en FastAPI es idiomático.
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =========================================================================
# mypy
# =========================================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pypdf.*", "clinical_extractor.*"]
ignore_missing_imports = true
follow_imports = "silent"

# =========================================================================
# pytest
# =========================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires ANTHROPIC_API_KEY and network — skip by default",
]
